<resources>
    <string name="app_name">Production Analyzer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="royalty">Royalty</string>
    <string name="tax_rate">Tax rate</string>
    <string name="discount_rate">Discount rate</string>
    <string name="well_life">Well life</string>
    <string name="decline_rate">Decline rate</string>
    <string name="price">Price</string>
    <string name="capex">Capex</string>
    <string name="opex_fix">Opex fix</string>
    <string name="result">Result</string>
    <string name="volume">Volume</string>
    <string name="submit">Submit</string>
    <string name="year">Year</string>
    <string name="enter_capex">Please, enter capex</string>
    <string name="no_more_than_life">Capex year is bigger than well life</string>
</resources>